--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,8 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+
 body {
 	line-height: 1;
 }
@@ -71,10 +73,52 @@ p {
     margin: 0 auto;
 }
 
+/*NAVIGATION STYLING*/
+
+.header * { 
+/*    border: 1px solid black; */
+}
+
+.header { 
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: flex-start;
+    align-content: center;
+    text-align: center;
+    align-items: baseline;
+    margin: 20px 0 30px 0px;
+}
+
+.header a{
+    flex: 1;
+} 
+
+.header a { 
+    text-decoration: none; 
+    color: black;
+    font-family: roboto;
+    font-weight: 600;
+   
+}
+
+
+.jumbotron { 
+    display: block;
+    margin: 20px 0px;
+
+}
+
+.about-section { 
+    display: block;
+    padding-bottom: 20px;
+    border-bottom: 1px black dashed; 
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 20px; 
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
@@ -104,7 +148,7 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
+/*    background: black;*/
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -112,6 +156,81 @@ p {
     justify-content: center;
 }
 
+.box:nth-of-type(1) { 
+    background: teal;
+}
+
+.box:nth-of-type(2) { 
+    background: gold;
+}
+
+.box:nth-of-type(3) { 
+    background: cadetblue;
+}
+
+.box:nth-of-type(4) { 
+    background: coral;
+}
+
+.box:nth-of-type(5) { 
+    background: crimson;
+}
+
+.box:nth-of-type(6) { 
+    background: forestgreen;
+}
+.box:nth-of-type(7) { 
+    background: darkorchid;
+}
+
+.box:nth-of-type(8) { 
+    background: hotpink;
+}
+
+.box:nth-of-type(9) { 
+    background: indigo;
+}
+
+.box:nth-of-type(10) { 
+    background: dodgerblue;
+}
+
+.mid-content { 
+    display: flex;
+    flex-flow: row wrap; 
+    justify-content: space-between;
+    margin-top: 20px;
+    align-content: center;
+    align-items: center;
+    
+}
+
+.mid-content .text-container { 
+    width: 48%;
+    padding-bottom: 20px;
+    border-bottom: 1px black dashed; 
+    margin-bottom: 6%; 
+    
+}
+.mid-content img { 
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.mid-content p { 
+    margin-bottom: 20px;
+}
+.mid-content a { 
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    margin: 5px;
+    padding: 10px 15px;
+    border: 1px solid black;
+    border-width: 2px;
+    border-radius: 10px;
+    
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -124,6 +243,11 @@ p {
 
 .bottom-content .text-container:last-child {
     padding-right: 0;
+}
+
+.bottom-section {
+    display: block;
+    padding-bottom: 20px;
 }
 
 footer {
